<resources>
    <string name="app_name">Simple RPG Dice Roller</string>
    <string name="number_of_dice">Number of Dice: %d</string>
    <string name="modifier">Modifier +/-: %d</string>
    <string name="missing_die">You need to have at least one die to roll, add dice, and try again!"</string>
    <string name="down_selector">down selector</string>
    <string name="up_selector">up selector</string>
    <string name="d4">d4</string>
    <string name="d12">d12</string>
    <string name="d00">d00</string>
    <string name="d20">d20</string>
    <string name="d10">d10</string>
    <string name="d8">d8</string>
    <string name="d6">d6</string>
    <string name="d4_name">D4</string>
    <string name="d6_name">d6</string>
    <string name="d8_name">D8</string>
    <string name="d10_name">D10</string>
    <string name="d12_name">D12</string>
    <string name="d20_name">D20</string>
    <string name="d100_name">D100</string>
    <string name="tap_the_dice_to_roll_n_good_luck">Tap the Dice to Roll \n Good Luck!</string>

    <!--preferences strings -->
    <string name="preferences_storage_name">app_preferences</string>

    <string name="background_color_key">background color</string>

    <string name="background_color_dragon">dragon</string>
    <string name="background_color_antique">antique</string>
    <string name="background_color_gold">gold</string>
    <string name="background_color_silver">silver</string>
    <string name="background_color_lavender">lavender</string>
    <string name="background_color_forrest">forrest</string>
    <string name="background_color_sandy">sandy</string>
    <string name="background_color">Background \nTheme</string>
    <string name="default_image_n_dragon_silloute">Default Image \n(Dragon Silhouette)</string>
    <string name="antique">Antique Parchment</string>
    <string name="forrest">Forrest</string>
    <string name="gold">Gold</string>
    <string name="lavender">Lavender</string>
    <string name="sandy">Sandy</string>
    <string name="silver">Silver</string>
    <string name="dice_logo">Dice Logo</string>
    <string name="title">Simple\nRPG Dice Roller</string>
    <string name="increase">To increase the number of dice to roll (xd) &#38; the modifier number,
        tap the arrow up button (green).</string>
    <string name="decrease">To decrease the number of dice to roll (xd) &#38; the modifier number,
        tap the arrow down button (red).</string>
    <string name="min_max">The default number of dice is 1, &#38; the default modifier number is 0.\n
        \nNumber of Dice: Min = 0; Max = ∞\nModifier Number: Min = ∞; Max = ∞\n
        \nTo reset the number of dice &#38; modifier number to the default: Select \'Reset\' from the main menu.\n
        \nIf your dice are behaving badly, click \'Dice Jail\' from the menu.</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="instructions">Instructions</string>
    <string name="reset">Reset</string>
    <string name="preferences">Preferences</string>
    <string name="about_app">About App</string>
    <string name="tamara_torres">Tamara Torres</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="developed_by">Created &#38; Coded by:</string>
    <string name="source">Image Source &#38; Licensing Information:</string>
    <string name="openclipart">OpenCliPart (Open Source)</string>
    <string name="https"><a href="https://openclipart.org/">openclipart.org</a></string>
    <string name="image_editing_by">Image Editing by:</string>
    <string name="dice_jail">Dice Jail</string>
    <string name="dice">dice</string>
    <string name="select_dice_to_put_in_jail">Jail Booking</string>
    <string name="Click">Which dice do you want to put in Dice Jail?</string>
    <string name="now_in_jail">is now in Dice Jail!</string>
    <string name="set_bail">Set Bail</string>
</resources>