<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preferences">

    <TextView
        android:id="@+id/background_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/background_color"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000080"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/background_color_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/dragon_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_image_n_dragon_silloute" />

        <RadioButton
            android:id="@+id/antique_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/antique" />

        <RadioButton
            android:id="@+id/forest_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forrest" />

        <RadioButton
            android:id="@+id/gold_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gold" />

        <RadioButton
            android:id="@+id/lavender_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lavender" />

        <RadioButton
            android:id="@+id/sandy_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sandy" />

        <RadioButton
            android:id="@+id/silver_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silver" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>