<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mod_up_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_green_dark"
        android:contentDescription="@string/up_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mod_textView"
        app:layout_constraintTop_toBottomOf="@+id/dice_up_imageView"
        app:srcCompat="@android:drawable/arrow_up_float"
        tools:srcCompat="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/mod_down_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_error"
        android:contentDescription="@string/down_selector"
        app:layout_constraintEnd_toStartOf="@+id/mod_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_down_imageView"
        app:srcCompat="@android:drawable/arrow_down_float"
        tools:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/dice_num_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_dice"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/dice_up_imageView"
        app:layout_constraintEnd_toStartOf="@+id/dice_up_imageView"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/dice_down_imageView"
        app:layout_constraintTop_toTopOf="@+id/dice_up_imageView"
        app:layout_constraintVertical_bias="0.571" />

    <ImageView
        android:id="@+id/dice_down_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_error"
        android:contentDescription="@string/down_selector"
        app:layout_constraintEnd_toStartOf="@+id/dice_num_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float"
        tools:srcCompat="@android:drawable/arrow_down_float" />

    <ImageView
        android:id="@+id/dice_up_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_green_dark"
        android:contentDescription="@string/up_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dice_num_textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_up_float"
        tools:srcCompat="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/mod_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/modifier"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/mod_down_imageView"
        app:layout_constraintEnd_toStartOf="@+id/mod_up_imageView"
        app:layout_constraintStart_toEndOf="@+id/mod_down_imageView"
        app:layout_constraintTop_toTopOf="@+id/mod_up_imageView"
        app:layout_constraintVertical_bias="0.611" />

    <ImageButton
        android:id="@+id/d4_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:contentDescription="@string/d4"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_down_imageView"
        app:srcCompat="@drawable/d4blue"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/d12_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/d12"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/d10_imageButton"
        app:layout_constraintEnd_toStartOf="@+id/d20_imageButton"
        app:layout_constraintStart_toEndOf="@+id/d10_imageButton"
        app:layout_constraintTop_toTopOf="@+id/d20_imageButton"
        app:srcCompat="@drawable/d12blue" />

    <ImageButton
        android:id="@+id/d00_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/d00"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d12_imageButton"
        app:srcCompat="@drawable/d00blue" />

    <ImageButton
        android:id="@+id/d8_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/d8"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mod_up_imageView"
        app:srcCompat="@drawable/d8blue" />

    <ImageButton
        android:id="@+id/d10_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/d10"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d4_imageButton"
        app:srcCompat="@drawable/d10blue" />

    <ImageButton
        android:id="@+id/d6_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/d6"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/d8_imageButton"
        app:layout_constraintEnd_toStartOf="@+id/d8_imageButton"
        app:layout_constraintStart_toEndOf="@+id/d4_imageButton"
        app:layout_constraintTop_toTopOf="@+id/d4_imageButton"
        app:srcCompat="@drawable/d6blue" />

    <ImageButton
        android:id="@+id/d20_imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:contentDescription="@string/d20"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d8_imageButton"
        app:srcCompat="@drawable/d20blue" />

</androidx.constraintlayout.widget.ConstraintLayout>